fix font family not showing

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-  font-family: "Roboto" "Helvetica Neue" Arial, sans-serif;
+  font-family: "Roboto", "Helvetica Neue", Arial, sans-serif;
   font-size: 1.5rem;
   line-height: 1.5;
   text-align: center;
